--- a/config/service.properties
+++ b/config/service.properties
@@ -2,3 +2,4 @@
 user=cn.cche.vo.User@cn.cche.service.UserServiceImpl
 blog=cn.cche.vo.Blog@cn.cche.service.BlogServiceImpl
 main=@cn.cche.service.MainPageServiceImpl
+comment=@cn.cche.vo.Comment@cn.cche.service.CommentServiceImpl
